--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.0",
     "flowbite": "^1.8.1",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
